--- a/index.html
+++ b/index.html
@@ -4,72 +4,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <title>LatifisWeb</title>
+    <link href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script type="module" src="main.js"></script>
-  
-    <title>Preguntas</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <h1 id="title" class="text-shadow"><span class="text-cPink">Mi</span> Portafolio</h1>
+            <nav>
+                <div class="btn-nav">☰</div>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Sobre mí</a></li>
+                    <li><a href="#">Proyectos</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main>
-        <div id="menu" class=" mx-auto p-3 bg-info  bg-opacity-10 border border-info border rounded mt-5">
-            <h1>Seleciona Tu Examen</h1>
-            <div id="examenes"></div>
-            <div class="button-group mx-auto">
-                <button id="addPregunta" class="mx-2 btn-half-width  btn btn-menu btn-dark">Importar</button>
-                <button id="makePregunta" class="mx-2 btn-half-width btn btn-menu btn-dark">Crear</button>
+        <section id="start" class="text-cPurple">
+            <div class="container-max">
+                <h1 class="text-shadow">Bienvenido a mi mundo creativo</h1>
+                <p>Explora mis proyectos y descubre mi pasión por la creación web y juegos.</p>
             </div>
-        </div>
-        <div id="prueba">
-            <div id="preguntas" class="container p-3 bg-info bg-opacity-10 border border-info border rounded mt-5">
-                <h3>Pregunta</h3>
-                <div id="opciones">
-                    <div class="opcion"><label><input type="radio" name="pregunta1"><span>Respuesta1</span></label></div>
-                    <div class="opcion">
-                        <label><input type="radio" name="pregunta1"> <span>Respuesta1</span></label>
-                    </div>
-                    <div class="opcion">
-                        <label><input type="radio" name="pregunta1"> <span>Respuesta1</span></label>
-                    </div>
-                    <div class="opcion">
-                        <label><input type="radio" name="pregunta1"> <span>Respuesta1</span></label>
-                    </div>
-                </div>
-                <div class="mx-auto button-group">
-                    <button id="cancelarHacerExamen" class="btn btn-half-width btn-danger gb-gradient">Cancelar</button>
-                    <button id="anterior" class="btn-half-width mx-2 btn btn-menu btn-dark">Anterior</button>
-                    <button id="siguiente" class="btn-half-width mx-2 btn btn-menu btn-dark">Siguiente</button>
-                </div>
+        </section>
+        <section id="about" class="container">
+            <h2 class="text-cPurple">Sobre mi</h2>
+            <div id="perfilImg"></div>
+            <p>
+                ¡Hola! Soy Lotfi Bayi, estudiante de segundo año en el ciclo superior de Diseño Web. Aunque
+                todavía estoy en proceso de aprendizaje, tengo una gran pasión por el desarrollo web. Me
+                encanta experimentar con nuevas tecnologías y mejorar mis habilidades cada día. Estoy
+                emocionado por seguir creciendo y aportar ideas frescas y creativas en el mundo del diseño
+                web.
+            </p>
+            <div class="skills">
+                <h3>Mis habilidades</h3>
+                <img src="img/icons/html.png" title="HTML" alt="html" class="icono">
+                <img src="img/icons/css.png" title="CSS" alt="css" class="icono">
+                <img src="img/icons/js.png" title="JavaScript" alt="javaScript" class="icono">
+                <img src="img/icons/bootstrap.png" title="Bootstrap" alt="Bootstrap" class="icono">
+                <img src="img/icons/php.png" title="PHP" alt="PHP" class="icono">
+                <img src="img/icons/sql.png" title="SQL" alt="SQL" class="icono">
             </div>
-            <div id="datosPrueba" class="container p-3 bg-info bg-opacity-10 border border-info border rounded mt-5">
-                <label> Corregir al momento <input id="corregir" type="checkbox"></label>
-                <span id="nota">Nota: 10/10</span>
-                <div id="preguntasDatos"></div>
-                <button id="borrarPreguntasInfo" class="btn btn-danger gb-gradient">Borrar</button>
-            </div>
-        </div>
-        <div id="context-menu">
-            <div id="abrir" class="context-menu-item">Abrir</div>
-            <div id="editar" class="context-menu-item">Editar</div>
-            <div id="imprimir" class="context-menu-item">Imprimir</div>
-            <div id="codificar" class="context-menu-item">Exportar</div>
-            <div id="eliminar" class="context-menu-item">Eliminar</div>
-        </div>
-        <div id="crearExamen" class="mx-auto mt-5 p-3 bg-info bg-opacity-10 border border-info border rounded">
-            <div id="contenedor">
+        </section>
 
+        <section id="projects" class="container">
+            <h2 class="text-blue-1 txt-center">Mis Proyectos</h2>
+            <div class="row">
+                <div class="project col-6">
+                    <div class="container mx-auto">
+                        <img class="img-proyect" src="img/proyectos/tetris.png" alt="nombreProyecto">
+                        <h3><a href="./juegos/tetris/index.html">Tetris</a></h3>
+                        <p class="description">
+                            En este proyecto, he desarrollado una versión responsive del clásico juego Tetris. Además de
+                            adaptarse a diferentes tamaños de pantalla, he incorporado nuevas funcionalidades como la
+                            previsualización de las próximas piezas y la posibilidad de guardar una pieza para usarla
+                            más tarde, enriqueciendo así la experiencia de juego.
+                        </p>
+                        <p class="resumen">Recreacion del juego Tetris responsive</p>
+                        <div class="skills">
+                            <img src="img/icons/html.png" title="HTML" alt="html" class="icono">
+                            <img src="img/icons/js.png" title="JavaScript" alt="javaScript" class="icono">
+                            <img src="img/icons/css.png" title="CSS" alt="css" class="icono">
+                        </div>
+                    </div>
+                </div>
+                <div class="project col-6">
+                    <div class="container mx-auto">
+                        <img class="img-proyect" src="img/proyectos/numPuz.png" alt="nombreProyecto">
+                        <h3><a href="./juegos/numPuz/index.html">NumPuz</a></h3>
+                        <p class="description">En este proyecto, implementé el clásico juego NumPuz, tratando cada pieza
+                            del rompecabezas como un objeto independiente. Este enfoque me permitió profundizar en los
+                            principios de encapsulación y, al mismo tiempo, dificultar la manipulación no deseada del
+                            juego a través de las herramientas de desarrollo del navegador</p>
+                        <p class="resumen">Juego numpuz encapsulado</p>
+                        <div class="skills">
+                            <img src="img/icons/html.png" title="HTML" alt="html" class="icono">
+                            <img src="img/icons/js.png" title="JavaScript" alt="javaScript" class="icono">
+                            <img src="img/icons/css.png" title="CSS" alt="css" class="icono">
+                        </div>
+                    </div>
+                </div>
+                <div class="project col-6">
+                    <div class="container mx-auto">
+                        <img class="img-proyect" src="img/proyectos/cartas.png" alt="nombreProyecto">
+                        <h3><a href="./juegos/e06cartas/">Juego de memoria</a></h3>
+                        <p class="description">Este juego de memoria trata cada carta como un objeto individual, lo que
+                            facilita la creación de animaciones personalizadas y evita que el usuario pueda ver el
+                            contenido de las cartas utilizando las herramientas de desarrollador.</p>
+                        <p class="resumen">Juego de memoria encapsulado y con animación de rotacion</p>
+                        <div class="skills">
+                            <img src="img/icons/html.png" title="HTML" alt="html" class="icono">
+                            <img src="img/icons/js.png" title="JavaScript" alt="javaScript" class="icono">
+                            <img src="img/icons/css.png" title="CSS" alt="css" class="icono">
+                        </div>
+                    </div>
+                </div>
+                <div class="project col-6">
+                    <div class="container mx-auto">
+                        <div class="ocuparEspacio">
+                            <img class="img-proyect" src="img/proyectos/cuestionario.png" alt="nombreProyecto">
+                        </div>
+                        <h3><a href="./miniProyectos/cuestionariosTipoTest/index.html">Creador de cuestionarios</a></h3>
+                        <p class="description">Este proyecto lo hice con la intención de usarlo para preparar mis próximos exámenes, le añadí todas las funcionalidades para hacer que el uso de la web sea más cómoda como la capacidad de editar, eliminar y compartir un examen.</p>
+                        <p class="resumen">Creador de exámenes de tipo test con funcionalidades necesarias, como crear, editar, eliminar, exportar, importar e imprimir exámenes.</p>
+                        <div class="skills">
+                            <img src="img/icons/html.png" title="HTML" alt="html" class="icono">
+                            <img src="img/icons/js.png" title="JavaScript" alt="javaScript" class="icono">
+                            <img src="img/icons/css.png" title="CSS" alt="css" class="icono">
+                            <img src="img/icons/bootstrap.png" title="Bootstrap" alt="Bootstrap" class="icono">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="button-group mx-auto">
-                <button id="cancelarCrearExamen" class="btn btn-danger gb-gradient">Cancelar</button>
-                <button id="addCrearPregunta" class="btn btn-success bg-gradient">Añadir Pregunta</button>
-                <button id="bCrearExamen" class="btn btn-dark">Crear el examen</button>
-            </div>
-        </div>
-        <div id="imprimirPDF" class="container"></div>
-        
+        </section>
     </main>
+    <footer>
+        <div id="contact" class="container mx-auto">
+            <h2 class="text-center text-cPink">Contáctame</h2>
+            <a href="https://github.com/Lotite"><img src="img/icons/github.png" title="HTML" alt="html"
+                    class="icono"></a>
+            <a href="https://www.linkedin.com/in/lotfi-bayi/"><img src="img/icons/linkedin.png" title="HTML" alt="html"
+                    class="icono"></a>
+            <a href="mailto:bayilotfi@gmail.com"><img src="img/icons/email.png" title="HTML" alt="html"
+                    class="icono"></a>
+        </div>
+    </footer>
 </body>
 
 </html>
